--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,6 +14,10 @@ server {
         fastcgi_pass php:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+        fastcgi_param QUERY_STRING $query_string;
+        fastcgi_param REQUEST_METHOD $request_method;
+        fastcgi_param REQUEST_URI $request_uri;
         include fastcgi_params;
         
         # Add these for better error handling
